--- a/reset_pass/another/index.html
+++ b/reset_pass/another/index.html
@@ -279,6 +279,7 @@
                                
                             </div>
                           </td>
+
                           <td
                             class="column column-2"
                             style="
@@ -588,6 +589,62 @@
                           >
                             <table
                               border="0"
+                              cellpadding="0"
+                              cellspacing="0"
+                              class="text_block block-1"
+                              role="presentation"
+                              style="
+                                mso-table-lspace: 0pt;
+                                mso-table-rspace: 0pt;
+                                word-break: break-word;
+                              "
+                              width="100%"
+                            >
+                              <tr>
+                                <td
+                                  class="pad"
+                                  style="
+                                    padding-bottom: 10px;
+                                    padding-left: 20px;
+                                    padding-right: 10px;
+                                    padding-top: 10px;
+                                  "
+                                >
+                                  <div style="font-family: sans-serif">
+                                    <div
+                                      class=""
+                                      style="
+                                        font-size: 12px;
+                                        font-family: Arial, Helvetica Neue,
+                                          Helvetica, sans-serif;
+                                        mso-line-height-alt: 21.6px;
+                                        color: #848484;
+                                        line-height: 1.8;
+                                      "
+                                    >
+                                      <p
+                                        style="
+                                          margin: 0;
+                                          font-size: 14px;
+                                          text-align: justify;
+                                          mso-line-height-alt: 25.2px;
+                                        "
+                                      >
+                                        <span style="font-size: 16px"
+                                          >Dear [User], We have received a
+                                          request to reset the password for your
+                                          account. If you did not make this
+                                          request, please ignore this email.
+                                        </span>
+                                      </p>
+                                    </div>
+                                  </div>
+                                </td>
+                              </tr>
+                            </table>
+
+                            <table
+                              border="0"
                               cellpadding="15"
                               cellspacing="0"
                               class="image_block block-1"
@@ -666,7 +723,7 @@
                                       margin-bottom: 0;
                                     "
                                   >
-                                    <strong>Forgot Your Password?</strong>
+                                    <!-- <strong>Forgot Your Password?</strong> -->
                                   </h1>
                                 </td>
                               </tr>
@@ -799,11 +856,10 @@
                                         "
                                       >
                                         <span style="font-size: 14px"
-                                          >Lorem ipsum dolor sit amet,
-                                          consectetuer adipiscing elit. Aenean
-                                          commodo ligula eget dolor. Aenean
-                                          massa.</span
-                                        >
+                                          >To reset your password, please click
+                                          on the Button below and follow the
+                                          instructions:
+                                        </span>
                                       </p>
                                     </div>
                                   </div>
@@ -1122,12 +1178,12 @@
                                       <tr>
                                         <td style="padding: 0 2px 0 2px">
                                           <a
-                                            href="https://www.facebook.com/"
+                                            href="https://www.facebook.com/Dot3on3/"
                                             target="_blank"
                                             ><img
                                               alt="Facebook"
                                               height="32"
-                                              src="images/facebook2x.png"
+                                              src="https://cdn-icons-png.flaticon.com/512/5968/5968764.png"
                                               style="
                                                 display: block;
                                                 height: auto;
@@ -1139,12 +1195,12 @@
                                         </td>
                                         <td style="padding: 0 2px 0 2px">
                                           <a
-                                            href="https://www.twitter.com/"
+                                            href="https://mobile.twitter.com/DotpotiT"
                                             target="_blank"
                                             ><img
                                               alt="Twitter"
                                               height="32"
-                                              src="images/twitter2x.png"
+                                              src="https://cdn-icons-png.flaticon.com/512/3670/3670151.png"
                                               style="
                                                 display: block;
                                                 height: auto;
@@ -1156,12 +1212,12 @@
                                         </td>
                                         <td style="padding: 0 2px 0 2px">
                                           <a
-                                            href="https://www.linkedin.com/"
+                                            href="https://www.linkedin.com/company/dotpotit/"
                                             target="_blank"
                                             ><img
                                               alt="Linkedin"
                                               height="32"
-                                              src="images/linkedin2x.png"
+                                              src="https://cdn-icons-png.flaticon.com/512/145/145807.png"
                                               style="
                                                 display: block;
                                                 height: auto;
@@ -1173,12 +1229,12 @@
                                         </td>
                                         <td style="padding: 0 2px 0 2px">
                                           <a
-                                            href="https://www.instagram.com/"
+                                            href="https://www.instagram.com/dotpotit/"
                                             target="_blank"
                                             ><img
                                               alt="Instagram"
                                               height="32"
-                                              src="images/instagram2x.png"
+                                              src="https://cdn-icons-png.flaticon.com/512/3955/3955024.png"
                                               style="
                                                 display: block;
                                                 height: auto;
@@ -1619,9 +1675,7 @@
                                           "
                                         >
                                           <!--<![endif]-->
-                                          <tr>
-     
-                                          </tr>
+                                          <tr></tr>
                                         </table>
                                       </td>
                                     </tr>
