--- a/reset_pass/another/index.html
+++ b/reset_pass/another/index.html
@@ -1350,30 +1350,11 @@
                                           >
                                         </div>
                                         <div class="menu-links">
-                                          <!--[if mso]><table role="presentation" border="0" cellpadding="0" cellspacing="0" align="center" style=""><tr style="text-align:center;"><!
-                                          [endif]-->[endif]--><!--[if mso]><td style="padding-top:5px;padding-right:15px;padding-bottom:5px;padding-left:15px"><!
-                                          [endif]--><a
-                                            href="www.example.com"
-                                            style="
-                                              mso-hide: false;
-                                              padding-top: 5px;
-                                              padding-bottom: 5px;
-                                              padding-left: 15px;
-                                              padding-right: 15px;
-                                              display: inline-block;
-                                              color: #101010;
-                                              font-family: Arial, Helvetica Neue,
-                                                Helvetica, sans-serif;
-                                              font-size: 14px;
-                                              text-decoration: none;
-                                              letter-spacing: normal;
-                                            "
-                                            target="_self"
-                                            >Unsubscribe</a
+                                         
                                           >><!--[if mso]></td><!
                                           [endif]-->[endif]--><!--[if mso]><td style="padding-top:5px;padding-right:15px;padding-bottom:5px;padding-left:15px"><!
                                           [endif]--><a
-                                            href="www.example.com"
+                                            href="https://dotpotit.com/"
                                             style="
                                               mso-hide: false;
                                               padding-top: 5px;
@@ -1388,12 +1369,12 @@
                                               text-decoration: none;
                                               letter-spacing: normal;
                                             "
-                                            target="_self"
-                                            >Help</a
+                                            target="_blank"
+                                            >Home</a
                                           >><!--[if mso]></td><!
                                           [endif]-->[endif]--><!--[if mso]><td style="padding-top:5px;padding-right:15px;padding-bottom:5px;padding-left:15px"><!
                                           [endif]--><a
-                                            href="www.example.com"
+                                            href="https://dotpotit.com/login"
                                             style="
                                               mso-hide: false;
                                               padding-top: 5px;
@@ -1408,12 +1389,12 @@
                                               text-decoration: none;
                                               letter-spacing: normal;
                                             "
-                                            target="_self"
+                                            target="_blank"
                                             >Login</a
                                           >><!--[if mso]></td><!
                                           [endif]-->[endif]--><!--[if mso]><td style="padding-top:5px;padding-right:15px;padding-bottom:5px;padding-left:15px"><!
                                           [endif]--><a
-                                            href="www.example.com"
+                                            href="https://dotpotit.com/privacyPolicy"
                                             style="
                                               mso-hide: false;
                                               padding-top: 5px;
@@ -1428,10 +1409,31 @@
                                               text-decoration: none;
                                               letter-spacing: normal;
                                             "
-                                            target="_self"
+                                            target="_blank"
                                             >Privacy</a
                                           >><!--[if mso]></td><!
                                           [endif]-->[endif]--><!--[if mso]></tr></table><![endif]-->
+
+                                           <!--[if mso]><table role="presentation" border="0" cellpadding="0" cellspacing="0" align="center" style=""><tr style="text-align:center;"><!
+                                          [endif]-->[endif]--><!--[if mso]><td style="padding-top:5px;padding-right:15px;padding-bottom:5px;padding-left:15px"><!
+                                          [endif]--><a
+                                          href="https://dotpotit.com/terms_conditions"
+                                          style="
+                                            mso-hide: false;
+                                            padding-top: 5px;
+                                            padding-bottom: 5px;
+                                            padding-left: 15px;
+                                            padding-right: 15px;
+                                            display: inline-block;
+                                            color: #101010;
+                                            font-family: Arial, Helvetica Neue,
+                                              Helvetica, sans-serif;
+                                            font-size: 14px;
+                                            text-decoration: none;
+                                            letter-spacing: normal;
+                                          "
+                                          target="_blank"
+                                          >Terms & Conditions</a
                                         </div>
                                       </td>
                                     </tr>
